--- a/ConorFoxWebsite/ConorFoxWebsite/Web.config
+++ b/ConorFoxWebsite/ConorFoxWebsite/Web.config
@@ -67,4 +67,16 @@
   <connectionStrings>
     <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-ConorFoxWebsite-20131103212905;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-ConorFoxWebsite-20131103212905.mdf" />
   </connectionStrings>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="BasicHttpBinding_IWebsiteService" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://localhost:49185/WebsiteService.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IWebsiteService"
+        contract="WebServiceReference.IWebsiteService" name="BasicHttpBinding_IWebsiteService" />
+    </client>
+  </system.serviceModel>
 </configuration>
