--- a/ConorFoxWebsite/ConorFoxWebsite/ConorFoxWebsite.csproj
+++ b/ConorFoxWebsite/ConorFoxWebsite/ConorFoxWebsite.csproj
@@ -105,7 +105,6 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountModels.cs" />
-    <Compile Include="Models\StaffRegistrationModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service References\WebServiceReference\Reference.cs">
       <AutoGen>True</AutoGen>
@@ -118,6 +117,7 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\fullcalendar.css" />
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_flat_75_ffffff_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_glass_55_fbf9ee_1x400.png" />
@@ -178,7 +178,8 @@
     <None Include="Scripts\jquery-1.7.1.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
-    <Content Include="Scripts\jquery-1.7.1.js" />
+    <Content Include="Scripts\fullcalendar.js" />
+    <Content Include="Scripts\jquery-1.11.0.js" />
     <Content Include="Scripts\jquery-1.7.1.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
     <Content Include="Scripts\jquery-ui-1.8.20.js" />
@@ -195,6 +196,12 @@
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Content>
     <Content Include="Service References\WebServiceReference\ConorFoxWebsite.WebServiceReference.Student.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <Content Include="Service References\WebServiceReference\ConorFoxWebsite.WebServiceReference.StaffInvite.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <Content Include="Service References\WebServiceReference\ConorFoxWebsite.WebServiceReference.StudentInvite.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Content>
     <None Include="Service References\WebServiceReference\Reference.svcmap">
@@ -220,20 +227,14 @@
     <Content Include="Scripts\MicrosoftMvcValidation.js" />
     <Content Include="Scripts\MicrosoftMvcValidation.debug.js" />
     <Content Include="Views\_ViewStart.cshtml" />
-    <Content Include="Views\Account\ChangePassword.cshtml" />
-    <Content Include="Views\Account\ChangePasswordSuccess.cshtml" />
-    <Content Include="Views\Account\LogOn.cshtml" />
-    <Content Include="Views\Account\Register.cshtml" />
-    <Content Include="Views\Home\About.cshtml" />
+    <Content Include="Views\Account\StudentLogOn.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_LogOnPartial.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Web.config" />
     <Content Include="Views\Home\Timetable.cshtml" />
     <Content Include="Views\Home\Summary.cshtml" />
-    <Content Include="Views\Home\EventDetails.cshtml" />
     <Content Include="Views\Shared\_StartLayout.cshtml" />
-    <Content Include="Views\Account\Administration.cshtml" />
     <None Include="Service References\WebServiceReference\WebsiteService.wsdl" />
     <None Include="Service References\WebServiceReference\WebsiteService.xsd">
       <SubType>Designer</SubType>
@@ -244,6 +245,11 @@
     <None Include="Service References\WebServiceReference\WebsiteService2.xsd">
       <SubType>Designer</SubType>
     </None>
+    <Content Include="Views\Account\StaffLogOn.cshtml" />
+    <Content Include="Views\Home\StaffSummary.cshtml" />
+    <Content Include="Views\Home\StaffTimetable.cshtml" />
+    <Content Include="Views\Account\LogOff.cshtml" />
+    <Content Include="Views\Shared\_StaffLayout.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
